--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@ html, body {
   display: flex;
   flex-direction: column;
 }
+body{
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-image: url("image/7.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #fff;
+}
 
 main {
   flex: 1; /* избутва футъра долу */
