--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,8 @@ footer a:hover::after {
 body.contact-page{
   background: url("/image/7.jpg") no-repeat center center fixed;
   background-size: cover;
-  color: #fff;
+  min-height: 100%;
+  
 }
 .contact-hero {
   text-align: center;
@@ -299,7 +300,9 @@ body.contact-page{
 
 .contact-hero h1 {
   font-size: 2.5em;
+  margin-top: 5px;
   margin-bottom: 15px;
+  color: #000000;
 }
 
 .contact-hero p {
@@ -367,10 +370,17 @@ body.contact-page{
 .map {
   flex: 1;
   min-width: 350px;
-  height: 100%;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 350px; /* гаранция */
+  border: 0;
+  display: block;
 }
 
 /* ==== RESPONSIVE ==== */
@@ -400,12 +410,18 @@ body.contact-page{
 
   .map {
     min-width: 100%;
-    height: 300px;
+  width: 100%;
+    height: auto;
+  }
+  .map iframe{
+width: 100%;
+height: 300px;
   }
 }
 /* Секция Услуги */
 .services-section {
-  padding: 60px 20px;
+  padding: 100px 20px 60px;
+  margin-left: -15px;
   text-align: center;
 
 }
@@ -413,7 +429,7 @@ body.contact-page{
 .services-section h1 {
   font-size: 2.2em;
   margin-bottom: 40px;
-  color: #333;
+  color: #000000;
 }
 
 .services-grid {
